Fix photo looking stupid and cut off

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@
   
   /* About Section */
   .aboutSection .aboutImg {
-    height: 350px;
+    height: 500px;
     width: 60%;
     margin-left: auto;
     border-radius: 30px;
